update stories and translator

--- a/stories/index.html
+++ b/stories/index.html
@@ -80,7 +80,7 @@
       <td>0001</td>
       <td><a href="http://africanstorybook.org/stories/very-tall-man-1">A very tall man</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#da0001">da</a>, <a href="#eo0001">eo</a>, <a href="#nn0001">nn</a>, <a href="#no0001">no</a>, <a href="#yue0001">yue</a>, <a href="#zh0001">zh</a></td>
+      <td><a href="#da0001">da</a>, <a href="#eo0001">eo</a>, <a href="#nn0001">nn</a>, <a href="#no0001">no</a>, <a href="#sv0001">sv</a>, <a href="#yue0001">yue</a>, <a href="#zh0001">zh</a></td>
     </tr>
     <tr>
       <td>0002</td>
@@ -152,7 +152,7 @@
       <td>0073</td>
       <td><a href="http://africanstorybook.org/stories/counting">Counting</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#no0073">no</a></td>
+      <td><a href="#eo0073">eo</a>, <a href="#no0073">no</a>, <a href="#yue0073">yue</a>, <a href="#zh0073">zh</a></td>
     </tr>
     <tr>
       <td>0078</td>
@@ -182,7 +182,7 @@
       <td>0112</td>
       <td><a href="http://africanstorybook.org/stories/my-body">My body</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#no0112">no</a>, <a href="#yue0112">yue</a>, <a href="#zh0112">zh</a></td>
+      <td><a href="#eo0112">eo</a>, <a href="#no0112">no</a>, <a href="#yue0112">yue</a>, <a href="#zh0112">zh</a></td>
     </tr>
     <tr>
       <td>0120</td>
@@ -233,6 +233,12 @@
       <td><a href="#no0204">no</a>, <a href="#sv0204">sv</a></td>
     </tr>
     <tr>
+      <td>0206</td>
+      <td><a href="http://africanstorybook.org/stories/teeth">Teeth</a></td>
+      <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+      <td><a href="#no0206">no</a></td>
+    </tr>
+    <tr>
       <td>0215</td>
       <td><a href="http://africanstorybook.org/stories/breakfast">Breakfast</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
@@ -272,7 +278,7 @@
       <td>0302</td>
       <td><a href="http://africanstorybook.org/stories/fire">Fire</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#no0302">no</a></td>
+      <td><a href="#eo0302">eo</a>, <a href="#no0302">no</a></td>
     </tr>
     <tr>
       <td>0337</td>
@@ -392,6 +398,13 @@
       <td>0067</td>
       <td>整餸</td>
       <td style="text-align: center"><a href="/stories/yue/0067_整餸.html">HTML</a> · <a href="/stories/yue/0067_整餸_slides.html" target="_blank">Slideshow</a></td>
+      <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/yue.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/wb7smewm55zy51g/yue.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsOVo0LWxvbWJvZE0/view?usp=sharing">Google Drive</a></li></ul></td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>0073</td>
+      <td>計動物</td>
+      <td style="text-align: center"><a href="/stories/yue/0073_計動物.html">HTML</a> · <a href="/stories/yue/0073_計動物_slides.html" target="_blank">Slideshow</a></td>
       <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/yue.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/wb7smewm55zy51g/yue.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsOVo0LWxvbWJvZE0/view?usp=sharing">Google Drive</a></li></ul></td>
       <td> </td>
     </tr>
@@ -562,6 +575,13 @@
       <td>0067</td>
       <td>做菜</td>
       <td style="text-align: center"><a href="/stories/zh/0067_做菜.html">HTML</a> · <a href="/stories/zh/0067_做菜_slides.html" target="_blank">Slideshow</a></td>
+      <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/zh.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/ufa524wxq9ot6zr/zh.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsbXhPZVI0QlpqUGs/view?usp=sharing">Google Drive</a></li></ul></td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>0073</td>
+      <td>数数动物</td>
+      <td style="text-align: center"><a href="/stories/zh/0073_数数动物.html">HTML</a> · <a href="/stories/zh/0073_数数动物_slides.html" target="_blank">Slideshow</a></td>
       <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/zh.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/ufa524wxq9ot6zr/zh.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsbXhPZVI0QlpqUGs/view?usp=sharing">Google Drive</a></li></ul></td>
       <td> </td>
     </tr>
@@ -766,6 +786,20 @@
       <td> </td>
     </tr>
     <tr>
+      <td>0073</td>
+      <td>Nombri bestojn</td>
+      <td style="text-align: center"><a href="/stories/eo/0073_nombri-bestojn.html">HTML</a> · <a href="/stories/eo/0073_nombri-bestojn_slides.html" target="_blank">Slideshow</a></td>
+      <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/eo.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/dk511xogcxmgs16/eo.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsVzMwY2Utb3FZdzA/view?usp=sharing">Google Drive</a></li></ul></td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>0112</td>
+      <td>Mia korpo</td>
+      <td style="text-align: center"><a href="/stories/eo/0112_mia-korpo.html">HTML</a> · <a href="/stories/eo/0112_mia-korpo_slides.html" target="_blank">Slideshow</a></td>
+      <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/eo.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/dk511xogcxmgs16/eo.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsVzMwY2Utb3FZdzA/view?usp=sharing">Google Drive</a></li></ul></td>
+      <td> </td>
+    </tr>
+    <tr>
       <td>0127</td>
       <td>Diversaj ludmanieroj</td>
       <td style="text-align: center"><a href="/stories/eo/0127_diversaj-ludmanieroj.html">HTML</a> · <a href="/stories/eo/0127_diversaj-ludmanieroj_slides.html" target="_blank">Slideshow</a></td>
@@ -776,6 +810,13 @@
       <td>0253</td>
       <td>Mia bildlibro</td>
       <td style="text-align: center"><a href="/stories/eo/0253_mia_bildlibro.html">HTML</a> · <a href="/stories/eo/0253_mia_bildlibro_slides.html" target="_blank">Slideshow</a></td>
+      <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/eo.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/dk511xogcxmgs16/eo.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsVzMwY2Utb3FZdzA/view?usp=sharing">Google Drive</a></li></ul></td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>0302</td>
+      <td>Fajro</td>
+      <td style="text-align: center"><a href="/stories/eo/0302_fajro.html">HTML</a> · <a href="/stories/eo/0302_fajro_slides.html" target="_blank">Slideshow</a></td>
       <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/eo.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/dk511xogcxmgs16/eo.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsVzMwY2Utb3FZdzA/view?usp=sharing">Google Drive</a></li></ul></td>
       <td> </td>
     </tr>
@@ -915,8 +956,8 @@
     </tr>
     <tr>
       <td>0007</td>
-      <td>Lete etter vann</td>
-      <td style="text-align: center"><a href="/stories/no/0007_lete-etter-vann.html">HTML</a> · <a href="/stories/no/0007_lete-etter-vann_slides.html" target="_blank">Slideshow</a></td>
+      <td>Å lete etter vann</td>
+      <td style="text-align: center"><a href="/stories/no/0007_å-lete-etter-vann.html">HTML</a> · <a href="/stories/no/0007_å-lete-etter-vann_slides.html" target="_blank">Slideshow</a></td>
       <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/no.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/ona8gaetcci9m5f/no.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsVmtZTlhSZlhpQkU/view?usp=sharing">Google Drive</a></li></ul></td>
       <td> </td>
     </tr>
@@ -936,8 +977,8 @@
     </tr>
     <tr>
       <td>0073</td>
-      <td>Telle dyr</td>
-      <td style="text-align: center"><a href="/stories/no/0073_telle-dyr.html">HTML</a> · <a href="/stories/no/0073_telle-dyr_slides.html" target="_blank">Slideshow</a></td>
+      <td>Å telle dyr</td>
+      <td style="text-align: center"><a href="/stories/no/0073_å-telle-dyr.html">HTML</a> · <a href="/stories/no/0073_å-telle-dyr_slides.html" target="_blank">Slideshow</a></td>
       <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/no.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/ona8gaetcci9m5f/no.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsVmtZTlhSZlhpQkU/view?usp=sharing">Google Drive</a></li></ul></td>
       <td> </td>
     </tr>
@@ -980,6 +1021,13 @@
       <td>0204</td>
       <td>Akatope</td>
       <td style="text-align: center"><a href="/stories/no/0204_akatope.html">HTML</a> · <a href="/stories/no/0204_akatope_slides.html" target="_blank">Slideshow</a></td>
+      <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/no.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/ona8gaetcci9m5f/no.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsVmtZTlhSZlhpQkU/view?usp=sharing">Google Drive</a></li></ul></td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>0206</td>
+      <td>Tenner</td>
+      <td style="text-align: center"><a href="/stories/no/0206_tenner.html">HTML</a> · <a href="/stories/no/0206_tenner_slides.html" target="_blank">Slideshow</a></td>
       <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/no.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/ona8gaetcci9m5f/no.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsVmtZTlhSZlhpQkU/view?usp=sharing">Google Drive</a></li></ul></td>
       <td> </td>
     </tr>
@@ -1129,6 +1177,13 @@
     </tr>
   </thead>
   <tbody>
+    <tr>
+      <td>0001</td>
+      <td>En mycket lång man</td>
+      <td style="text-align: center"><a href="/stories/sv/0001_en-mycket-lång-man.html">HTML</a> · <a href="/stories/sv/0001_en-mycket-lång-man_slides.html" target="_blank">Slideshow</a></td>
+      <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/sv.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/u9o5vfvq09o857b/sv.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsNEVzYlpFTEZnc0E/view?usp=sharing">Google Drive</a></li></ul></td>
+      <td> </td>
+    </tr>
     <tr>
       <td>0009</td>
       <td>Var är min katt?</td>
