--- a/translator/index.html
+++ b/translator/index.html
@@ -87,6 +87,7 @@
             <input type="hidden" name="_subject" id="subject_line" value="New submission!" />
             <input type="hidden" name="story_number" id="story_number" value="" />
             <input type="hidden" name="story_language" id="story_language" value="" />
+            <input type="hidden" name="md_title" id="md_title" value="" />
             <input type="hidden" name="story_translation" id="story_translation" value="" />
             <input type="submit" value="Submit Translation">
           </form>
