update latest stories, indices, translator

--- a/stories/index.html
+++ b/stories/index.html
@@ -110,7 +110,7 @@
       <td>0007</td>
       <td><a href="http://africanstorybook.org/stories/looking-water">Looking for water</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#eo0007">eo</a>, <a href="#no0007">no</a>, <a href="#yue0007">yue</a>, <a href="#zh0007">zh</a></td>
+      <td><a href="#eo0007">eo</a>, <a href="#es0007">es</a>, <a href="#no0007">no</a>, <a href="#yue0007">yue</a>, <a href="#zh0007">zh</a></td>
     </tr>
     <tr>
       <td>0008</td>
@@ -135,6 +135,12 @@
       <td><a href="http://africanstorybook.org/stories/rainbow">The Rainbow</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
       <td><a href="#yue0049">yue</a>, <a href="#zh0049">zh</a></td>
+    </tr>
+    <tr>
+      <td>0053</td>
+      <td><a href="http://africanstorybook.org/stories/me">This is me</a></td>
+      <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+      <td><a href="#yue0053">yue</a>, <a href="#zh0053">zh</a></td>
     </tr>
     <tr>
       <td>0064</td>
@@ -171,6 +177,12 @@
       <td><a href="http://africanstorybook.org/stories/things-i-do-school-0">Things I do at school</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
       <td><a href="#yue0086">yue</a>, <a href="#zh0086">zh</a></td>
+    </tr>
+    <tr>
+      <td>0087</td>
+      <td><a href="http://africanstorybook.org/stories/i-read">I like to read</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="#es0087">es</a></td>
     </tr>
     <tr>
       <td>0095</td>
@@ -212,13 +224,13 @@
       <td>0127</td>
       <td><a href="http://africanstorybook.org/stories/different-plays">Different Plays</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#eo0127">eo</a>, <a href="#ja0127">ja</a>, <a href="#no0127">no</a>, <a href="#yue0127">yue</a>, <a href="#zh0127">zh</a></td>
+      <td><a href="#eo0127">eo</a>, <a href="#es0127">es</a>, <a href="#ja0127">ja</a>, <a href="#no0127">no</a>, <a href="#yue0127">yue</a>, <a href="#zh0127">zh</a></td>
     </tr>
     <tr>
       <td>0129</td>
       <td><a href="http://africanstorybook.org/stories/lazy-little-brother">Lazy little brother</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#no0129">no</a></td>
+      <td><a href="#no0129">no</a>, <a href="#yue0129">yue</a>, <a href="#zh0129">zh</a></td>
     </tr>
     <tr>
       <td>0147</td>
@@ -239,6 +251,12 @@
       <td><a href="#no0206">no</a></td>
     </tr>
     <tr>
+      <td>0210</td>
+      <td><a href="http://africanstorybook.org/stories/tingi-and-cows">Tingi and the Cows</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="#es0210">es</a></td>
+    </tr>
+    <tr>
       <td>0215</td>
       <td><a href="http://africanstorybook.org/stories/breakfast">Breakfast</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
@@ -248,13 +266,13 @@
       <td>0231</td>
       <td><a href="http://africanstorybook.org/stories/weather-book">Weather book</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#no0231">no</a></td>
+      <td><a href="#es0231">es</a>, <a href="#no0231">no</a></td>
     </tr>
     <tr>
       <td>0253</td>
       <td><a href="http://africanstorybook.org/stories/my-picture-book-0">My Picture Book</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#eo0253">eo</a>, <a href="#ja0253">ja</a>, <a href="#no0253">no</a>, <a href="#yue0253">yue</a>, <a href="#zh0253">zh</a></td>
+      <td><a href="#eo0253">eo</a>, <a href="#es0253">es</a>, <a href="#ja0253">ja</a>, <a href="#no0253">no</a>, <a href="#yue0253">yue</a>, <a href="#zh0253">zh</a></td>
     </tr>
     <tr>
       <td>0271</td>
@@ -279,6 +297,12 @@
       <td><a href="http://africanstorybook.org/stories/fire">Fire</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
       <td><a href="#eo0302">eo</a>, <a href="#no0302">no</a></td>
+    </tr>
+    <tr>
+      <td>0327</td>
+      <td><a href="http://africanstorybook.org/stories/counting-animals">Counting animals</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="#es0327">es</a></td>
     </tr>
     <tr>
       <td>0337</td>
@@ -395,6 +419,13 @@
       <td> </td>
     </tr>
     <tr>
+      <td>0053</td>
+      <td>呢個係我</td>
+      <td style="text-align: center"><a href="/stories/yue/0053_呢個係我.html">HTML</a> · <a href="/stories/yue/0053_呢個係我_slides.html" target="_blank">Slideshow</a></td>
+      <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/yue.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/wb7smewm55zy51g/yue.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsOVo0LWxvbWJvZE0/view?usp=sharing">Google Drive</a></li></ul></td>
+      <td> </td>
+    </tr>
+    <tr>
       <td>0067</td>
       <td>整餸</td>
       <td style="text-align: center"><a href="/stories/yue/0067_整餸.html">HTML</a> · <a href="/stories/yue/0067_整餸_slides.html" target="_blank">Slideshow</a></td>
@@ -461,6 +492,13 @@
       <td>0127</td>
       <td>玩嘅動作</td>
       <td style="text-align: center"><a href="/stories/yue/0127_玩嘅動作.html">HTML</a> · <a href="/stories/yue/0127_玩嘅動作_slides.html" target="_blank">Slideshow</a></td>
+      <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/yue.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/wb7smewm55zy51g/yue.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsOVo0LWxvbWJvZE0/view?usp=sharing">Google Drive</a></li></ul></td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>0129</td>
+      <td>爛玩嘅細佬</td>
+      <td style="text-align: center"><a href="/stories/yue/0129_爛玩嘅細佬.html">HTML</a> · <a href="/stories/yue/0129_爛玩嘅細佬_slides.html" target="_blank">Slideshow</a></td>
       <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/yue.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/wb7smewm55zy51g/yue.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsOVo0LWxvbWJvZE0/view?usp=sharing">Google Drive</a></li></ul></td>
       <td> </td>
     </tr>
@@ -565,6 +603,13 @@
       <td> </td>
     </tr>
     <tr>
+      <td>0053</td>
+      <td>这是我</td>
+      <td style="text-align: center"><a href="/stories/zh/0053_这是我.html">HTML</a> · <a href="/stories/zh/0053_这是我_slides.html" target="_blank">Slideshow</a></td>
+      <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/zh.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/ufa524wxq9ot6zr/zh.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsbXhPZVI0QlpqUGs/view?usp=sharing">Google Drive</a></li></ul></td>
+      <td> </td>
+    </tr>
+    <tr>
       <td>0064</td>
       <td>乔伊上学</td>
       <td style="text-align: center"><a href="/stories/zh/0064_乔伊上学.html">HTML</a> · <a href="/stories/zh/0064_乔伊上学_slides.html" target="_blank">Slideshow</a></td>
@@ -638,6 +683,13 @@
       <td>0127</td>
       <td>玩的动作</td>
       <td style="text-align: center"><a href="/stories/zh/0127_玩的动作.html">HTML</a> · <a href="/stories/zh/0127_玩的动作_slides.html" target="_blank">Slideshow</a></td>
+      <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/zh.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/ufa524wxq9ot6zr/zh.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsbXhPZVI0QlpqUGs/view?usp=sharing">Google Drive</a></li></ul></td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>0129</td>
+      <td>贪玩的弟弟</td>
+      <td style="text-align: center"><a href="/stories/zh/0129_贪玩的弟弟.html">HTML</a> · <a href="/stories/zh/0129_贪玩的弟弟_slides.html" target="_blank">Slideshow</a></td>
       <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/zh.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/ufa524wxq9ot6zr/zh.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsbXhPZVI0QlpqUGs/view?usp=sharing">Google Drive</a></li></ul></td>
       <td> </td>
     </tr>
@@ -1155,9 +1207,58 @@
       <td> </td>
     </tr>
     <tr>
+      <td>0007</td>
+      <td>Buscando agua</td>
+      <td style="text-align: center"><a href="/stories/es/0007_buscando-agua.html">HTML</a> · <a href="/stories/es/0007_buscando-agua_slides.html" target="_blank">Slideshow</a></td>
+      <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/es.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/7ybh97ds8bsztnx/es.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9Esbsd0ZxRnBQdWdwZlE/view?usp=sharing">Google Drive</a></li></ul></td>
+      <td> </td>
+    </tr>
+    <tr>
       <td>0008</td>
       <td>¿Qué estás haciendo?</td>
       <td style="text-align: center"><a href="/stories/es/0008_qué-estás-haciendo.html">HTML</a> · <a href="/stories/es/0008_qué-estás-haciendo_slides.html" target="_blank">Slideshow</a></td>
+      <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/es.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/7ybh97ds8bsztnx/es.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9Esbsd0ZxRnBQdWdwZlE/view?usp=sharing">Google Drive</a></li></ul></td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>0087</td>
+      <td>¡Me gusta leer!</td>
+      <td style="text-align: center"><a href="/stories/es/0087_me-gusta-leer.html">HTML</a> · <a href="/stories/es/0087_me-gusta-leer_slides.html" target="_blank">Slideshow</a></td>
+      <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/es.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/7ybh97ds8bsztnx/es.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9Esbsd0ZxRnBQdWdwZlE/view?usp=sharing">Google Drive</a></li></ul></td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>0127</td>
+      <td>Juegos diferentes</td>
+      <td style="text-align: center"><a href="/stories/es/0127_juegos-diferentes.html">HTML</a> · <a href="/stories/es/0127_juegos-diferentes_slides.html" target="_blank">Slideshow</a></td>
+      <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/es.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/7ybh97ds8bsztnx/es.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9Esbsd0ZxRnBQdWdwZlE/view?usp=sharing">Google Drive</a></li></ul></td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>0210</td>
+      <td>Tingi y las vacas</td>
+      <td style="text-align: center"><a href="/stories/es/0210_tingi-y-las-vacas.html">HTML</a> · <a href="/stories/es/0210_tingi-y-las-vacas_slides.html" target="_blank">Slideshow</a></td>
+      <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/es.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/7ybh97ds8bsztnx/es.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9Esbsd0ZxRnBQdWdwZlE/view?usp=sharing">Google Drive</a></li></ul></td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>0231</td>
+      <td>El libro del clima</td>
+      <td style="text-align: center"><a href="/stories/es/0231_el-libro-del-clima.html">HTML</a> · <a href="/stories/es/0231_el-libro-del-clima_slides.html" target="_blank">Slideshow</a></td>
+      <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/es.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/7ybh97ds8bsztnx/es.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9Esbsd0ZxRnBQdWdwZlE/view?usp=sharing">Google Drive</a></li></ul></td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>0253</td>
+      <td>Mi libro ilustrado</td>
+      <td style="text-align: center"><a href="/stories/es/0253_mi-libro-ilustrado.html">HTML</a> · <a href="/stories/es/0253_mi-libro-ilustrado_slides.html" target="_blank">Slideshow</a></td>
+      <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/es.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/7ybh97ds8bsztnx/es.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9Esbsd0ZxRnBQdWdwZlE/view?usp=sharing">Google Drive</a></li></ul></td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>0327</td>
+      <td>Contar animales</td>
+      <td style="text-align: center"><a href="/stories/es/0327_contar-animales.html">HTML</a> · <a href="/stories/es/0327_contar-animales_slides.html" target="_blank">Slideshow</a></td>
       <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/es.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/7ybh97ds8bsztnx/es.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9Esbsd0ZxRnBQdWdwZlE/view?usp=sharing">Google Drive</a></li></ul></td>
       <td> </td>
     </tr>
