--- a/stories/index.html
+++ b/stories/index.html
@@ -182,7 +182,7 @@
       <td>0087</td>
       <td><a href="http://africanstorybook.org/stories/i-read">I like to read</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#es0087">es</a></td>
+      <td><a href="#es0087">es</a>, <a href="#sv0087">sv</a></td>
     </tr>
     <tr>
       <td>0095</td>
@@ -237,6 +237,12 @@
       <td><a href="http://africanstorybook.org/stories/my-family-and-i">My family and I</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
       <td><a href="#zh0147">zh</a></td>
+    </tr>
+    <tr>
+      <td>0156</td>
+      <td><a href="http://africanstorybook.org/stories/hungry-crocodile">The hungry crocodile</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="#no0156">no</a>, <a href="#sv0156">sv</a></td>
     </tr>
     <tr>
       <td>0204</td>
@@ -1070,6 +1076,13 @@
       <td> </td>
     </tr>
     <tr>
+      <td>0156</td>
+      <td>Den sultne krokodillen</td>
+      <td style="text-align: center"><a href="/stories/no/0156_den-sultne-krokodillen.html">HTML</a> · <a href="/stories/no/0156_den-sultne-krokodillen_slides.html" target="_blank">Slideshow</a></td>
+      <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/no.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/ona8gaetcci9m5f/no.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsVmtZTlhSZlhpQkU/view?usp=sharing">Google Drive</a></li></ul></td>
+      <td> </td>
+    </tr>
+    <tr>
       <td>0204</td>
       <td>Akatope</td>
       <td style="text-align: center"><a href="/stories/no/0204_akatope.html">HTML</a> · <a href="/stories/no/0204_akatope_slides.html" target="_blank">Slideshow</a></td>
@@ -1289,6 +1302,20 @@
       <td>0009</td>
       <td>Var är min katt?</td>
       <td style="text-align: center"><a href="/stories/sv/0009_var-är-min-katt.html">HTML</a> · <a href="/stories/sv/0009_var-är-min-katt_slides.html" target="_blank">Slideshow</a></td>
+      <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/sv.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/u9o5vfvq09o857b/sv.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsNEVzYlpFTEZnc0E/view?usp=sharing">Google Drive</a></li></ul></td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>0087</td>
+      <td>Jag gillar att läsa!</td>
+      <td style="text-align: center"><a href="/stories/sv/0087_jag-gillar-att-läsa.html">HTML</a> · <a href="/stories/sv/0087_jag-gillar-att-läsa_slides.html" target="_blank">Slideshow</a></td>
+      <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/sv.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/u9o5vfvq09o857b/sv.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsNEVzYlpFTEZnc0E/view?usp=sharing">Google Drive</a></li></ul></td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>0156</td>
+      <td>Den hungriga krokodilen</td>
+      <td style="text-align: center"><a href="/stories/sv/0156_den-hungriga-krokodilen.html">HTML</a> · <a href="/stories/sv/0156_den-hungriga-krokodilen_slides.html" target="_blank">Slideshow</a></td>
       <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/sv.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/u9o5vfvq09o857b/sv.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsNEVzYlpFTEZnc0E/view?usp=sharing">Google Drive</a></li></ul></td>
       <td> </td>
     </tr>
