--- a/stories/es/0006_anansi_y_sabiduría.html
+++ b/stories/es/0006_anansi_y_sabiduría.html
@@ -63,7 +63,7 @@ Cuento de Ghana<br>Español</div>
 
 <p><img src="https://global-asp.github.io/img/0006/06.jpg" /></p>
 
-<p>En un instante llegó a la parte superior del árbol. Pero entonces  paró y pensó, “se supone que soy yo qien tiene toda la sabiduría, y aquí mi hijo fue más listo que yo!” Anansi se puso tan enojado por esto que echó el tarro de barro abajo fuera del árbol.</p>
+<p>En un instante llegó a la parte superior del árbol. Pero entonces  paró y pensó, “se supone que soy yo quien tiene toda la sabiduría, y aquí mi hijo fue más listo que yo!” Anansi se puso tan enojado por esto que echó el tarro de barro abajo fuera del árbol.</p>
 
 <div class="pagenum">5</div>
 <p style="page-break-after: always;"></p>
