--- a/stories/index.html
+++ b/stories/index.html
@@ -278,7 +278,7 @@
       <td>0253</td>
       <td><a href="http://africanstorybook.org/stories/my-picture-book-0">My Picture Book</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#eo0253">eo</a>, <a href="#es0253">es</a>, <a href="#ja0253">ja</a>, <a href="#no0253">no</a>, <a href="#yue0253">yue</a>, <a href="#zh0253">zh</a></td>
+      <td><a href="#eo0253">eo</a>, <a href="#es0253">es</a>, <a href="#ja0253">ja</a>, <a href="#no0253">no</a>, <a href="#ru0253">ru</a>, <a href="#yue0253">yue</a>, <a href="#zh0253">zh</a></td>
     </tr>
     <tr>
       <td>0271</td>
@@ -342,6 +342,8 @@
 <li class="toc"><a href="#norwegian">Norwegian [norsk]</a></li><br>
 
 <li class="toc"><a href="#norwegian-nynorsk">Norwegian (Nynorsk) [nynorsk]</a></li><br>
+
+<li class="toc"><a href="#russian">Russian [Русский]</a></li><br>
 
 <li class="toc"><a href="#spanish">Spanish [Español]</a></li><br>
 
@@ -1194,6 +1196,29 @@
       <td>Zama er flink!</td>
       <td style="text-align: center"><a href="/stories/nn/0095_zama_er_flink.html">HTML</a> · <a href="/stories/nn/0095_zama_er_flink_slides.html" target="_blank">Slideshow</a></td>
       <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/nn.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/av6080viuj180to/nn.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsbGZWNExJSU9DbFk/view?usp=sharing">Google Drive</a></li></ul></td>
+      <td> </td>
+    </tr>
+  </tbody>
+</table>
+
+   </ul>
+  <h3><a name='russian'>Russian [Русский]</a></h3>
+   <ul><table>
+  <thead>
+    <tr>
+      <th>Story #</th>
+      <th>Story title</th>
+      <th style="text-align: center">View</th>
+      <th class="dl">Download</th>
+      <th class="lic">License</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>0253</td>
+      <td>Моя книжка с картинками</td>
+      <td style="text-align: center"><a href="/stories/ru/0253_моя-книжка-с-картинками.html">HTML</a> · <a href="/stories/ru/0253_моя-книжка-с-картинками_slides.html" target="_blank">Slideshow</a></td>
+      <td><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="">Github release</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="">Google Drive</a></td>
       <td> </td>
     </tr>
   </tbody>
