--- a/stories/ru/0253_моя-книжка-с-картинками_slides.html
+++ b/stories/ru/0253_моя-книжка-с-картинками_slides.html
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="anansi-y-sabiduria" class="slide level1">
-<h1>Anansi y sabiduría</h1>
+<section id="моя-книжка-с-картинками" class="slide level1">
+<h1>Моя книжка с картинками</h1>
 <center>
-<img src="https://global-asp.github.io/img/0006/01.jpg" />
+<img src="https://global-asp.github.io/img/0253/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0006/02.jpg" /></p>
-<p>Hace mucho, mucho tiempo las personas no supieron cualquier cosa. No sabían cómo cultivar, o cómo tejer tela, o cómo hacer herramientas de hierro. El dios Nyame arriba en el cielo tenía toda la sabiduría del mundo. La mantenía seguro en un tarro de barro.</p>
+<p><img src="https://global-asp.github.io/img/0253/02.jpg" /></p>
+<p>Девочка</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0006/03.jpg" /></p>
-<p>Un día, Nyame decidió que le daría el tarro de sabiduría a Anansi. Cada vez Anansi miraba en el tarro de barro, aprendía algo nuevo. ¡Qué apasionante!</p>
+<p><img src="https://global-asp.github.io/img/0253/03.jpg" /></p>
+<p>Птица</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0006/04.jpg" /></p>
-<p>Codicioso Anansi pensó, “voy a mantener el tarro seguro en la parte superior de un árbol alto. ¡Entonces lo puedo tener todo para mi!” Hiló un hilo largo, lo enrolló por el tarro de barro, y lo ligó a su estómago. Empezó a subir el árbol. Pero fue duro subir el árbol con el tarro que le chocaba en las rodillas todo el tiempo.</p>
+<p><img src="https://global-asp.github.io/img/0253/04.jpg" /></p>
+<p>Лев</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0006/05.jpg" /></p>
-<p>Todo este tiempo el joven hijo de Anansi había estado mirando en el fondo del árbol. Dijo, “no sería más fácil subir si te ligaste el tarro a tu espalda en cambio?” Anansi intentó ligar el tarro de barro lleno de sabiduría a su espalda, y realmente era mucho más fácil.</p>
+<p><img src="https://global-asp.github.io/img/0253/05.jpg" /></p>
+<p>Кот</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,30 +132,12 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0006/06.jpg" /></p>
-<p>En un instante llegó a la parte superior del árbol. Pero entonces paró y pensó, “se supone que soy yo quien tiene toda la sabiduría, y aquí mi hijo fue más listo que yo!” Anansi se puso tan enojado por esto que echó el tarro de barro abajo fuera del árbol.</p>
-<center>
-<strong>5</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://global-asp.github.io/img/0006/07.jpg" /></p>
-<p>Se rompió en pedazos en la tierra. La sabiduría era libre para todo el mundo para compartir. Y así es cómo la gente aprendió a cultivar, tejer tela, hacer herramientas de hierro, y todas las otras cosas que la gente sabe cómo hacer.</p>
-<center>
-<strong>6</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="anansi-y-sabiduria-1">Anansi y sabiduría</h2>
-Text: Cuento de Ghana<br> Illustrations: Wiehan de Jager<br> Translation: Espen Stranger-Johannessen<br> Language: Spanish<br>
+<h2 id="моя-книжка-с-картинками-1">Моя книжка с картинками</h2>
+Text: Oku Modesto<br> Illustrations: Rob Owen, Marleen Visser, Katrien Coetzer, Wiehan de Jager, Karen Lilje, Catherine Groenewald, Alice Toich<br> Translation: @_balyasnikova<br> Language: Russian<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/anansi-and-wisdom'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/my-picture-book-0'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
